<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle_stroke_blue_border"
        android:src="@drawable/ic_plane_paper"
        android:scaleType="fitXY"
        android:id="@+id/iv_request_icon"/>

    <com.hunters.ponstaff.customs.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/request_use_coupon"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="17sp"
        android:id="@+id/tv_message"/>
    <com.hunters.ponstaff.customs.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/coupon_request_text_1"
        android:textColor="@color/grey"
        android:textSize="14sp" />
    <com.hunters.ponstaff.customs.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/coupon_request_text_2"
        android:textColor="@color/grey"
        android:textSize="14sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.hunters.ponstaff.customs.CustomButton
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/accept"
                android:background="@drawable/background_rectangle_highlight"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:id="@+id/btn_accept"/>
            <com.hunters.ponstaff.customs.CustomButton
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/reject"
                android:background="@drawable/background_rectangle_unhighlight"
                android:textColor="@color/blue_sky"
                android:textSize="18sp"
                android:id="@+id/btn_reject"/>
        </LinearLayout>
        <com.hunters.ponstaff.customs.CustomButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/done"
            android:background="@drawable/background_rectangle_highlight"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/btn_done"
            android:visibility="gone"/>
    </FrameLayout>
</LinearLayout>